# XFMS

./: .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml  server.json  smithery.yaml
.github/: FUNDING.yml
.github/workflows/: ci.yml  sponsor-monthly-reminder.yml  sponsor-quarterly-reminder.yml
docs/: hackernoon-launch.md  methodology.md  xpansion-overview.md
docs/examples/: basic.py  leaf_priorities_override.py
tests/: test_client.py
xfms_client/: __init__.py  cli.py  client.py
xfms_mcp/: __init__.py  __main__.py  server.py
